syntax = "proto3";

package news;

option go_package = "/gen/go/news;newsv1";

service NewsService {
    rpc ListNews (ListNewsRequest) returns (ListNewsResponse);
    rpc GetNews (GetNewsRequest) returns (GetNewsResponse);
}

message ListNewsRequest {
    int32 limit = 1;
    string page_token = 2;
}

message ListNewsResponse {
    repeated News items = 1;
    string next_page_token = 2;
}

message GetNewsRequest {
    string id = 1;
}

message GetNewsResponse {
    News item = 1;
}

message News {
    string id = 1;
    string title = 2;
    string category = 3;
    string short_description = 4;
    string long_description = 5;
    string link = 6;
    string image_url = 7;
    int64 published_at = 8;
    int64 fetched_at = 9;
}